forth/test/fail/test_const_fold_redundant_const_shift.af
use' ../../lang.af
fun: .test_const_fold_redundant_const_shift { -- out } 10 0 .lsl end
